contact info align fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,11 +178,10 @@
   .contact-info iframe {
     width: 400px;
     height: 400px;
-    float: left;
   }
-  .contact-info {
+  .contact-info div {
     width: 410px;
-    display:inline-block;
+    display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px;
